src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
  color-scheme: dark;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

body {
  cursor: url('assets/cursor-assets/custom_pointer_default.svg'), default;
  background-color: var(--color-primary); 
}

.overflow-anchor-auto {
  overflow-anchor: auto;
}

/* For Webkit-based browsers (Chrome, Safari and Opera) */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.hash-span {
  margin-top: -100px;
  padding-bottom: 100px;
  display: block;
}

.list-experience li::marker {
  content: '';
  font-weight: 800px;
  font-size: 1.2em;
  margin-right: 8px;
  color: var(--color-accent-2);
}

/* for customCursor */  
.circle {
  position: fixed;
  z-index: 100;
  display: flex;
  flex-flow: row;
  align-content: center;
  justify-content: center;
  top: 0;
  left: 0;
  height: 10px;
  width: 10px;
  border-radius: 200px;
  pointer-events: none;
  color: var(--color-accent-3);
  /* mix-blend-mode: exclusion; */
  
  text-align: center;
  font-size: 16px;
}

.cursor-text {
  height: 10px;
  width: 10px;
  font-size: 10px;
  /* mix-blend-mode: difference; */
}

.curved-text {
  position: absolute;
  top: -32px;
  right: -32px;
  rotate: 270deg;
  /* mix-blend-mode: difference; */
}

.rotating-curved-text {
  -webkit-animation: spin 10s linear infinite;
  -moz-animation: spin 10s linear infinite;
  animation: spin 10s linear infinite;
}
@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}
@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

